[package]
name = "advent"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
base64 = "0.22.1"
block-modes = "0.9.1"
browsercookie-rs = "0.1.1"
chrono = "0.4.38"
cipher = "0.4.4"
ctr = "0.9.2"
decrypt-cookies = "0.6.1"
dirs = "5.0.1"
hex = "0.4.3"
hmac = "0.12.1"
keyring = "3.6.1"
miette = "7.4.0"
pbkdf2 = "0.12.2"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
rusqlite = "0.32.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha1 = "0.10.6"
tokio = { version = "1.41.1", features = ["full"] }
whoami = "1.5.2"
itertools = "0.13.0"

